--- a/animation.css
+++ b/animation.css
@@ -1,7 +1,13 @@
 
 /*Zoom Animation*/
+.zoom-in img{ transition: transform .5s ease; } 
 .zoom-in {overflow:hidden;}
 .zoom-in:hover img { transform: scale(1.1);  }
+
+.zoom-out img{ transition: transform .5s ease; } 
+.zoom-out {overflow:hidden;}
+.zoom-out:hover img { transform: scale(0.8);  }
+
 
 /*Button Hover Animation*/
 .circle_click {
